--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Phaser 3 Game</title>
+    <title>Space Supply Loop</title>
     <style>
       body {
         padding: 0;
